--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/nextjs-registry": "^1.0.2",
     "@iconify/react": "^5.0.2",
+    "antd": "^5.22.4",
     "motion": "^11.12.0",
     "next": "14.2.18",
     "react": "^18",
