--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/nextjs-registry": "^1.0.2",
     "@iconify/react": "^5.0.2",
     "antd": "^5.22.4",
+    "jsonwebtoken": "^9.0.2",
     "motion": "^11.12.0",
     "next": "14.2.18",
     "react": "^18",
@@ -22,6 +23,7 @@
     "swiper": "^11.1.15"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
