--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@iconify/react": "^5.0.2",
     "antd": "^5.22.4",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.476.0",
     "motion": "^11.12.0",
     "next": "14.2.18",
     "react": "^18",
