--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-element-popper": "^2.1.7",
+    "react-icons": "^5.5.0",
     "react-international-phone": "^4.5.0",
     "react-multi-date-picker": "^4.5.2",
+    "recharts": "^3.1.0",
     "sharp": "^0.33.5",
     "swiper": "^11.1.15"
   },
@@ -29,6 +31,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/recharts": "^1.8.29",
     "@types/tailwindcss": "^3.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
