--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,41 +1,8 @@
-log_format with_auth '$remote_addr - $remote_user [$time_local] "$request" '
-                     '$status $body_bytes_sent "$http_referer" '
-                     '"$http_user_agent" "$http_authorization"';
-
-access_log /var/log/nginx/access.log with_auth;
 server {
     listen 80;
-    server_name mahaliafrica.com;
 
     location / {
-        proxy_pass http://mahali_fe:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
-}
-
-server {
-    listen 80;
-    server_name admin.mahaliafrica.com;
-
-    location / {
-        proxy_pass http://mahali_admin_fe:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
-}
-server {
-    listen 80;
-    server_name api.mahaliafrica.com;
-
-    location / {
-        proxy_pass http://207.180.253.55:8090;
+        proxy_pass http://nextjs:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
